--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "simple-crypto-js": "^1.0.0",
+    "simple-crypto-js": "^1.0.0"
   },
   "author": "Danang Galuh Tegar Prasetyo",
   "license": "MIT"
