--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "secure-cookies-js",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Easily manage session cookies with secure manner using SimpleCryptoJS.",
-  "main": "cookies.js",
+  "repository": "https://github.com/danang-id/secure-cookies-js.git",
   "homepage": "https://github.com/danang-id/secure-cookies-js",
+  "author": "https://github.com/danang-id",
+  "license": "MIT",
+  "main": "src/SecureCookies.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp scripts",
+    "test": "nyc mocha --reporter spec --require ts-node/register 'test/**/*.test.ts'",
+    "test:watch": "nyc mocha --watch --reporter spec --require ts-node/register 'test/**/*.test.ts'",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "simple-crypto-js": "1.1.1"
+    "simple-crypto-js": "^2.0.2"
   },
-  "author": "Danang Galuh Tegar Prasetyo",
-  "license": "MIT"
+  "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "@types/crypto-js": "^3.1.39",
+    "@types/mocha": "^5.2.0",
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.1",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^4.0.2",
+    "mocha": "^5.2.0",
+    "nyc": "^11.8.0",
+    "ts-node": "^6.0.5",
+    "typescript": "^2.8.3"
+  }
 }
